# Thesis_Hardware

./: .env  .gitignore  .gitmodules  CMakeLists.txt  client.py  log.txt  lwip_import.cmake  mqtt_log.txt  mqtt_log_1.txt  mqtt_log_10.txt  mqtt_log_10.txt_traveled_path.txt  mqtt_log_11.txt  mqtt_log_11.txt_traveled_path.txt  mqtt_log_12.txt  mqtt_log_12.txt_traveled_path.txt  mqtt_log_13.txt  mqtt_log_13.txt_traveled_path.txt  mqtt_log_14.txt  mqtt_log_14.txt_traveled_path.txt  mqtt_log_15.txt  mqtt_log_15.txt_traveled_path.txt  mqtt_log_16.txt  mqtt_log_17.txt  mqtt_log_17.txt_traveled_path.txt  mqtt_log_18.txt  mqtt_log_18.txt_traveled_path.txt  mqtt_log_2.txt  mqtt_log_3.txt  mqtt_log_3.txt_traveled_path.txt  mqtt_log_4.txt  mqtt_log_4.txt_traveled_path.txt  mqtt_log_5.txt  mqtt_log_5.txt_traveled_path.txt  mqtt_log_6.txt  mqtt_log_6.txt_traveled_path.txt  mqtt_log_7.txt  mqtt_log_7.txt_traveled_path.txt  mqtt_log_8.txt  mqtt_log_8.txt_traveled_path.txt  mqtt_log_9.txt  (+5 more)
port/FreeRTOS-Kernel/: FreeRTOSConfig.h
port/lwip/: lwipopts.h  lwippools.h
port/wolfssl/: myTime.c  user_settings.h
src/: AgentExecutor.cpp  AgentExecutor.h  CMakeLists.txt  TaskAgent.cpp  TaskAgent.h  WifiHelper.cpp  config.h  main.cpp  pins.h
src/agent_implementation/: CMakeLists.txt  agent.cpp  agent.h  feature_config.h
src/agent_implementation/agent_control/battery/: BatteryManager.cpp  BatteryManager.h  MicroControllerBatterManager.cpp  MicroControllerBatteryManager.h  MotionSystemBatteryManager.cpp  MotionSystemBatteryManager.h
src/agent_implementation/agent_control/communication/: TimeSynchronizer.cpp  TimeSynchronizer.h
src/agent_implementation/agent_control/path_planning/: ForceVectorCalculator.cpp  ForceVectorCalculator.h  FrontierEvaluator.cpp  FrontierEvaluator.h  PathFollower.cpp  PathFollower.h  RandomWalk.cpp  RandomWalk.h  SimplePathPlanner.cpp  SimplePathPlanner.h  WallFollower.cpp  WallFollower.h
src/agent_implementation/configs/: config.yaml  experiment_config_noise_com15_loss0_fs9999_evap100_mc9999_mrl_9999.yaml  experiment_config_noise_com999_loss0_fs9999_evap100_mc9999_mrl_9999.yaml  hardware_config.yaml  p_sensor_0_5_no_doubt.yaml  p_sensor_0_75.yaml  p_sensor_0_9.yaml  p_sensor_1.yaml  placeholder_config.yaml  placeholder_config_m1_5.yaml
src/agent_implementation/utils/: Algorithms.cpp  Algorithms.h  Box.h  CustomComparator.h  Quadtree.h  coordinate.cpp  coordinate.h
src/argos3/: CMakeLists.txt
src/argos3/core/: config.h
src/argos3/core/utility/: string_utilities.h
src/argos3/core/utility/datatypes/: datatypes.h
src/argos3/core/utility/math/: angles.h  quaternion.h  range.h  vector2.h  vector3.h
src/argos3/core/utility/math/matrix/: matrix.h  rotationmatrix3.cpp  rotationmatrix3.h  squarematrix.h
src/motion/: DifferentialDrive.cpp  DifferentialDrive.h  MotorController.cpp  MotorController.h  MotorEncoder.cpp  MotorEncoder.h  PID.cpp  PID.h
src/mqtt/: MQTTCLient.cpp  MQTTClient.h  TLSTransBlock.cpp  TLSTransBlock.h  TestTrans.cpp  TestTrans.h  radio.cpp  radio.h
src/sensing/: DistanceSensorHandler.cpp  DistanceSensorHandler.h  HC_SR04.cpp  HC_SR04.h
src/uart/: UARTHandler.cpp  UARTHandler.h
